# VioletApp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: codebase.yml
violet/: __init__.py  app.py  db.py  models.py
violet/api/: __init__.py  app.py  auth.py  discussions.py  projects.py
violet/frontend/: __init__.py  app.py
violet/routes/: discussions.py
violet/static/css/: styles.min.css
violet/static/js/: auth.js  cookie.js
violet/templates/: about.html  conversation.html  conversations.html  index.html  login.html  register.html  register_success.html
